fix(arrays): preserve allocation dimensions in viewers
Render Java array allocations as C++ declarator dimensions and initialize sized C++ arrays when generating Python.